# zone-analysis

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  pyt.py  vcpkg.json
models/: README.md
scripts/: build_opencv_rpi.sh  build_rpi.sh  build_ubuntu.sh  build_windows.ps1  run_rpi.sh  run_ubuntu.sh  run_windows.ps1  setup_rpi.sh  setup_ubuntu.sh  setup_windows.ps1
src/: camera.cpp  camera.hpp  detector.cpp  detector.hpp  main.cpp  notifier.cpp  notifier.hpp  tracker.cpp  tracker.hpp
